<resources>
    <string name="app_name">Red Fitness</string>
    <string name="BackB">Back</string>
    <string name="reset">Reset</string>
    <string name="start_stop">Start/Stop</string>
    <string name="class_details_will_appear_here">Class Details will appear here</string>
    <string name="_00_00">00:00</string>
    <string name="class_name_time">Class Name - Time</string>
    <string name="enter_username">Enter UserName!</string>
    <string name="enter_password">Enter Password!</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
</resources>