<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/radieant_background"
    android:gravity="center_horizontal">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/BackB"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:text="@string/BackB"
        android:defaultFocusHighlightEnabled="true"/>
</LinearLayout>
    <!-- Title and Time -->
    <TextView
        android:id="@+id/classTitleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_name_time"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <!-- Stopwatch -->
    <TextView
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

    <Button
        android:id="@+id/startStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_stop"
        android:layout_marginEnd="20dp"
        android:onClick="toggleStopwatch"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:onClick="resetStopwatch"/>
    </LinearLayout>

    <!-- Class Details -->
    <ListView
        android:id="@+id/classDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/class_details_will_appear_here"
        android:textSize="16sp" />

</LinearLayout>
