<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radieant_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/imageview"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:src="@mipmap/login_screen_pic3_foreground"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.254" />

  <EditText
      android:id="@+id/edittextU"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/enter_username"
      android:textColor="@color/black"
      android:layout_marginTop="90px"
      android:inputType="textPersonName"
      android:layout_marginBottom="30dp"
      android:background="@drawable/rounded_edit_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edittextP"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:hint="@string/enter_password"
      android:textColor="@color/black"
      android:inputType="textPassword"
     android:background="@drawable/rounded_edit_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="200dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <Button
        android:id="@+id/signup"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/sign_up" />


    <Button
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/login" />
  </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>